correcting alignment for right aligned timelines

--- a/src/app.scss
+++ b/src/app.scss
@@ -278,7 +278,7 @@ h5 {
 }
 
 .align-end {
-    justify-content: end;
+    justify-content: flex-end;
     text-align: end;
     .year-bubble {
         order: 2;
